--- a/src/app/components/skills/ride-skill/ride-skill.component.html
+++ b/src/app/components/skills/ride-skill/ride-skill.component.html
@@ -36,6 +36,15 @@
     </mat-expansion-panel-header>
     <div fxLayout="column">
       <mat-card>
+        <mat-checkbox [checked]="upgrade.active == true"
+                      [indeterminate]="upgrade.active == null"
+                      (click)="toggle(skilltree, upgrade, 'active')"
+                      [matTooltip]="(upgrade.active == true ? 'COMPONENTS__SKILLS__YES' : (upgrade.active == false ? 'COMPONENTS__SKILLS__NO' : 'COMPONENTS__SKILLS__DONT_CHANGE')) | translate"
+                      matTooltipPosition="right">
+          {{ 'COMPONENTS__SKILLS__RIDE__ACTIVE' | translate }}
+        </mat-checkbox>
+      </mat-card>
+      <mat-card>
         <mat-input-container>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__RIDE__SPEED_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__RIDE__SPEED' | translate" type="text"
